# ag2-hack

./: .env.example  .gitignore  README.md  pulse_precision_ag_spec.md  pyproject.toml
docs/: README.md  agents.md  architecture.md  cli.md  configuration.md  custom-agents.md  dashboard.md  interventions.md  sdk-quickstart.md  testing.md
pesto/: __init__.py  active_learning.py  calibration.py  captain.py  cli.py  cross_exam.py  detection.py  sdk.py  (+5 more)
pulse/: README.md  captain.py  detection.py  local_model.py  pyproject.toml
pulse/agents/: disease_classifier.py  health_classifier.py  pesticide_fate.py  segmentation.py  skeptic.py  weather_prior.py
pulse/biophysics/: water_balance.py
pulse/dashboard/: server.py
pulse/dashboard/static/: app.js  index.html  style.css
pulse/data/demo/_aerial/labels/: 005.txt  006.txt  012.txt  018.txt  020.txt  021.txt  022.txt  032.txt  039.txt  040.txt  042.txt  051.txt  054.txt  058.txt
pulse/pulse/: active_learning.py  backbone.py  captain.py  cross_exam.py  temporal.py  visual_explain.py
pulse/pulse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pulse/pulse/agents/: anomaly_detector.py  base.py  disease_classifier.py  ecological_dynamics.py  growth_stage.py  vlm_reasoner.py
pulse/pulse/dashboard/: server.py
pulse/pulse/dashboard/static/: app.js  index.html  style.css
pulse/rag/: retriever.py
pulse/tests/: test_backbone.py  test_ecological_dynamics_agent.py  test_growth_stage.py  test_local_model.py  test_pesticide_fate_agent.py  test_protocol_firewall.py  test_rag.py  test_temporal.py  test_weed_detector_agent.py
(+126 files in other folders)
