[project]
name = "pulse"
version = "0.1.0"
description = "Multi-agent inference engine for precision agriculture (AG2)"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Multi-agent runtime
    "ag2[openai]>=0.7.0",

    # Vision models
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
    "ultralytics>=8.0.225",
    "segment-anything>=1.0",

    # Image / array
    "pillow>=10.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "scikit-image>=0.22",

    # Web stack (frontend)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",

    # Data fetching
    "huggingface-hub>=0.22",
    "datasets>=2.18",
    "requests>=2.31",

    # RAG
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.6",

    # Config
    "python-dotenv>=1.0",

    # Dev
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
